--- a/overlays/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlays/common/frameworks/base/core/res/res/values/config.xml
@@ -24,6 +24,7 @@
          "users" = list of users
          -->
     <string-array translatable="false" name="config_globalActionsList">
+        <item>power</item>
         <item>reboot</item>
         <item>screenshot</item>
  </string-array>
